Added few Streams example and minor chnages to JDBC code