@@ -3,7 +3,8 @@ package selenium;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Duration;
 import java.util.List;
 
@@ -15,8 +16,7 @@ import org.testng.asserts.SoftAssert;
 
 public class BrokenLinks {
 
-	@SuppressWarnings("deprecation")
-	public static void main(String[] args) throws MalformedURLException, IOException {
+	public static void main(String[] args) throws MalformedURLException, IOException, URISyntaxException {
 		WebDriver driver = new ChromeDriver();
 		driver.manage().window().maximize();
 		driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(5));
@@ -28,7 +28,7 @@ public class BrokenLinks {
 		for (WebElement link : links) {
 			String url = link.getAttribute("href");
 //			System.out.println(url);
-			HttpURLConnection connection = (HttpURLConnection)new URL(url).openConnection();
+			HttpURLConnection connection = (HttpURLConnection)new URI(url).toURL().openConnection();
 			connection.setRequestMethod("HEAD");
 			connection.connect();
 			int responseCode = connection.getResponseCode();
@@ -37,5 +37,4 @@ public class BrokenLinks {
 		softAss.assertAll();
 		driver.quit();
 	}
-
 }
